fix-review(screen-recording): standardize variable names and improve cleanup logic
Standardize the variable name `recordedVideoBlobUrl` to `recordedVideoUrl` across files for consistency. Add a cleanup timer to handle video URL revocation if no download occurs. Improve error handling and cleanup logic in the offscreen recording process to ensure resources are properly released.

--- a/01_RecordSelectors/popup/popup.html
+++ b/01_RecordSelectors/popup/popup.html
@@ -11,12 +11,14 @@
             <span id="status-indicator"
                   class="indicator stopped"
                   role="status"
+                  aria-live="polite"
                   aria-label="Clicks recording stopped"></span>
             <span class="spacer"></span>
             <span>Screen:</span>
             <span id="screen-status-indicator"
                   class="indicator stopped"
                   role="status"
+                  aria-live="polite"
                   aria-label="Screen recording stopped"></span>
         </div>
         <textarea id="recorded-clicks" rows="8" readonly placeholder="Recorded events will appear here..."></textarea>
