--- a/01_RecordSelectors/popup/popup.html
+++ b/01_RecordSelectors/popup/popup.html
@@ -40,6 +40,7 @@
             <button id="stop-screen-btn" disabled>Stop Screen Rec</button>
             <button id="download-video-btn" disabled>Download Video</button>
         </div>
+        <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-label="Recording status updates"></div>
     </div>
     <script src="popup.js"></script>
 </body>
