feat(popup): add AI-generated steps functionality and improve recording flow
This commit introduces a new feature to generate steps using AI based on recorded data. It also refactors the recording flow to handle separate audio and display streams, improves error handling, and enhances UI state management. The changes include:
- Added new UI elements for generating and copying steps
- Improved media stream handling in offscreen.js
- Enhanced button state management in popup.js
- Added support for storing and retrieving generated steps

--- a/01_RecordSelectors/popup/popup.html
+++ b/01_RecordSelectors/popup/popup.html
@@ -40,7 +40,13 @@
             <button id="stop-screen-btn" disabled>Stop Screen Rec</button>
             <button id="download-video-btn" disabled>Download Video</button>
         </div>
-        <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-label="Recording status updates"></div>
+        <div class="results-section">
+            <label>Generated Steps:</label>
+            <textarea id="generated-steps" rows="10" readonly placeholder="Analysis results will appear here after generating..."></textarea>
+            <button id="generate-steps-btn" disabled>Generate Steps with AI</button>
+            <button id="copy-steps-btn" disabled>Copy Steps</button>
+        </div>
+        <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-label="Status updates"></div>
     </div>
     <script src="popup.js"></script>
 </body>
