refactor(RecordSelectors): migrate JavaScript files to TypeScript and update build configuration
Migrate content.js and offscreen.js to TypeScript, add TypeScript configuration, and update build scripts. Include new icons, update manifest.json to reflect changes, and modify .gitignore to exclude build artifacts. This refactor improves type safety and maintainability of the codebase.

--- a/01_RecordSelectors/offscreen/offscreen.html
+++ b/01_RecordSelectors/offscreen/offscreen.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <!-- This document handles media recording -->
-    <script src="offscreen.js"></script>
+    <script src="../dist/offscreen/offscreen.js"></script>
 </body>
 </html> 
