--- a/01_RecordSelectors/popup/popup.html
+++ b/01_RecordSelectors/popup/popup.html
@@ -57,6 +57,6 @@
         </div>
         <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-label="Status updates"></div>
     </div>
-    <script src="popup.js"></script>
+    <script src="../dist/popup/popup.js"></script>
 </body>
 </html>
