simply the extension with active and total time only

--- a/02_DailyLifeAI/src/popup/popup.html
+++ b/02_DailyLifeAI/src/popup/popup.html
@@ -21,6 +21,6 @@
 <body>
     <h3>DailyLifeAI Tracker</h3>
     <button id="statsButton">View Statistics</button>
-    <script src="popup.js"></script>
+    <script src="popup.bundle.js"></script>
 </body>
 </html>
