refactor(stateManager, uiUpdater, stats): improve error handling and DOM manipulation
Enhance error handling in stateManager to avoid clearing state unnecessarily. Refactor DOM manipulation in uiUpdater for better readability and maintainability. Add null checks and improve type safety in stats.ts to prevent runtime errors. These changes aim to improve the robustness and maintainability of the codebase.

--- a/02_DailyLifeAI/src/stats/stats.html
+++ b/02_DailyLifeAI/src/stats/stats.html
@@ -46,12 +46,12 @@
                 <th data-sort-key="activeTime">Active Time</th>
                 <th data-sort-key="firstSeen">First Seen</th>
                 <th data-sort-key="lastSeen">Last Seen</th>
-                <th data-sort-key="pageLifeTime">Life Time</th>
+                <th data-sort-key="lifeTime">Life Time</th>
             </tr>
         </thead>
         <tbody id="statsTableBody">
             <!-- Rows will be inserted here by stats.js -->
-             <tr><td colspan="8">Loading data...</td></tr>
+             <tr><td colspan="5">Loading data...</td></tr>
         </tbody>
     </table>
 
