--- a/01_RecordSelectors/popup/popup.html
+++ b/01_RecordSelectors/popup/popup.html
@@ -57,6 +57,7 @@
             <label>Settings:</label>
             <label for="api-key-input">Gemini API Key:</label>
             <input type="password" id="api-key-input" placeholder="Enter your API key">
+            <p class="note">Note: your API key is stored only for the current browser session and will be cleared upon closing.</p>
             <button id="save-api-key-btn">Save Key</button>
         </div>
         <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-label="Status updates"></div>
